--- a/keith-quotes-webapp/src/App.css
+++ b/keith-quotes-webapp/src/App.css
@@ -15,7 +15,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 7.5vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -35,4 +35,15 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.button-row {
+  display: table;
+  width: 100%;
+  table-layout: fixed;
+  border-spacing: 5px; 
+}
+
+.button-div {
+  display: table-cell;
 }
